refactor: edit login component

--- a/question-bank-frontend/src/app/components/login/login.component.html
+++ b/question-bank-frontend/src/app/components/login/login.component.html
@@ -26,5 +26,6 @@
         Entrar
       </button>
     </form>
+    <div *ngIf="!credentialsValid" class="mt-2 text-danger">Email e/ou senha incorretos!</div>
   </div>
 </div>
