feat: add user component

--- a/question-bank-frontend/src/app/components/layout/layout.component.html
+++ b/question-bank-frontend/src/app/components/layout/layout.component.html
@@ -3,6 +3,7 @@
     <ul class="nav flex-column">
       <li class="nav-item">
         <a class="nav-link" routerLink="/dashboard">Dashboard</a>
+        <a class="nav-link" routerLink="/users">Usuários</a>
       </li>
     </ul>
   </nav>
