--- a/question-bank-frontend/src/app/components/layout/layout.component.html
+++ b/question-bank-frontend/src/app/components/layout/layout.component.html
@@ -4,6 +4,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/dashboard">Dashboard</a>
         <a class="nav-link" routerLink="/users">Usuários</a>
+        <a class="nav-link" routerLink="/topics">Tópicos</a>
+        <a class="nav-link" routerLink="/questions">Questões</a>
+        <a class="nav-link" routerLink="/alternatives">Alternativas</a>
       </li>
     </ul>
   </nav>
